JPUI-7 | DashboardCard - Fixed Body Props Propagation & Fixed Updater Z-Index

--- a/src/styles/sass/components/layout/card/DashboardCardUpdate.module.scss
+++ b/src/styles/sass/components/layout/card/DashboardCardUpdate.module.scss
@@ -13,9 +13,10 @@
 }
 
 .updateIcon {
+  z-index: 1000;
   font-size: 2em;
-  margin-left: -10px;
   color: $learn-colour;
   position: absolute;
-  left: 50%;
+  -webkit-filter: drop-shadow(3px 3px 2px rgba(0, 0, 0, .7));
+  filter: drop-shadow(0 0 1px rgba(0, 0, 0, .7));
 }
